# c_snake_game

./: meson.build
scripts/: install_czmq.sh  install_libzmq.sh  install_ruby.sh  run_tests.sh  run_valgrind_tests.sh
src/: config.h  error.h  main.c  meson.build
src/controller/: controller.h  controller_type.h  meson.build  user_value.h
src/controller/_private/: controller.c  controller_private.h  meson.build
src/controller/_private/local/: controller_local.c  meson.build  proxy_local.c  stream_proxy.c  stream_proxy.h
src/game_config/: create_game_config.h  game_config.c  game_config.h  game_difficulty.h  game_size.h  game_type.h  meson.build  public_game_config.h  user_type.h
src/game_config/_private/: _p_game_config.h  game_config.c  game_config.h  game_difficulty.c  game_size.c  meson.build
src/game_config/_private/create_game_config/: _p_create_game_config_from_cli.c  create_game_config.c  create_game_config.h  meson.build
src/game_config/_private/create_game_config/cli/: _p_create_difficulty.c  _p_create_difficulty_cli.c  _p_create_difficulty_cli.h  _p_create_game_config_cli.c  _p_create_game_config_cli.h  _p_create_size_cli.c  _p_create_size_cli.h  meson.build
src/game_config_cp/: game_config.c  game_type.h  private_game_config.h
src/game_config_creation/: convert_cli_args_to_game_config.c
src/game_config_creator/: game_config_creator.h  meson.build
src/game_config_creator/_private/: create_game_config_auto.c  meson.build  validate_game_config.h
src/game_config_creator/_private/cli/: create_game_config_cli.c  create_game_config_cli.h  create_game_difficulty_cli.c  create_game_difficulty_cli.h  create_game_size_cli.c  create_game_size_cli.h  create_user_type_cli.c  create_user_type_cli.h  create_users_types_cli.h  utils.h
src/interfaces/: meson.build
src/proj_config/: constant.h  error.h  meson.build
src/proj_config/_private/: constant.c  meson.build
src/user/: meson.build  user_type.h
src/utils/: logging_utils.c  logging_utils.h  meson.build  str_utils.c  str_utils.h
src_new/: meson.build
src_new/game_config/: game_config.h  game_difficulty.h  game_size.h  game_type.h  meson.build  user_type.h
src_new/game_config/_private/: game_config.c  game_type.c  meson.build  user_type.c
src_new/game_config_creator/: game_config_creator.h  meson.build
src_new/game_config_creator/_private/: create_game_config.c  create_game_config_auto.c  meson.build  validate_game_config.c
src_new/game_config_creator/_private/cli/: create_game_config_cli.c  create_game_config_cli.h  create_game_difficulty_cli.c  create_game_size_cli.c  create_user_type_cli.c  create_users_types_cli.c  meson.build  utils.c
src_new/interfaces/: meson.build
src_new/proj_config/: constant.h  error.h  meson.build
src_new/proj_config/_private/: constant.c  meson.build
src_new/utils/: logging_utils.c  meson.build  str_utils.c  str_utils.h
subprojects/: c_lists.wrap  char_lists.wrap
test/: meson.build
test/game_config/_private/: meson.build  test_game_config.c  test_p_create_game_config_from_cli.c  utils.c  utils.h
test/game_config/_private/create_game_config/: meson.build  test_p_create_difficulty_cli.c  test_p_create_game_config_from_cli.c  test_p_create_size_cli.c
test/test_controller.d/: meson.build  test_controller_local.c  test_stream_proxy.c
test/test_game_config.d/: meson.build  test_game_config.c  test_game_difficulty.c  test_game_size.c  test_user_type.c
test/test_game_config_creator.d/: test_create_game_config_auto.c
test/test_game_config_creator.d/test_cli.d/: test_create_game_config_cli.c  test_create_game_difficulty_cli.c  test_create_game_size_cli.c  test_create_user_type_cli.c  test_create_users_types_cli.c
test/utils/: controller_test_utils.c  controller_test_utils.h  game_config_creator_test_utils.h  game_config_test_utils.c  game_config_test_utils.h  meson.build  utils_test_utils.h
test_new/: meson.build
test_new/test_game_config.d/: meson.build  test_game_config.c  test_game_type.c
test_new/test_game_config_creator.d/: meson.build  test_create_game_config_auto.c
test_new/test_game_config_creator.d/test_cli.d/: meson.build  test_create_game_config_cli.c  test_create_game_difficulty_cli.c  test_create_game_size_cli.c  test_create_user_type_cli.c  test_create_users_types_cli.c  test_utils.c
test_new/utils/: game_config_creator_test_utils.c  game_config_creator_test_utils.h  game_config_test_utils.c  game_config_test_utils.h  meson.build  utils_test_utils.c
