game_config_creator_sources += files(
  'utils.c', 'utils.h',
  'create_game_difficulty_cli.c', 'create_game_difficulty_cli.h',
  'create_game_size_cli.c', 'create_game_size_cli.h',
  'create_user_type_cli.c', 'create_user_type_cli.h',
  'create_users_types_cli.c', #'create_user_type_cli.h',
  'create_game_config_cli.c', 'create_game_config_cli.h',
)
